// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentSummaryDetails render Correct composition 1`] = `
<DocumentFragment>
  <ul
    class="assessmentSummaryDetails"
  >
    <li
      class="assessmentSummaryDetailsRow"
    >
      <div
        class="testSummary"
      >
        <div
          class="testSummaryDisplayName"
        >
          Assessment1
        </div>
        <div
          class="testSummaryStatus"
          data-automation-id="test-summary-status/Assessment1"
        >
          <mock-outcomeiconset
            displayname="Assessment1"
            fail="2"
            incomplete="1"
            pass="1"
          />
        </div>
      </div>
    </li>
    <li
      class="assessmentSummaryDetailsRow"
    >
      <div
        class="testSummary"
      >
        <div
          class="testSummaryDisplayName"
        >
          Assessment2
        </div>
        <div
          class="testSummaryStatus"
          data-automation-id="test-summary-status/Assessment2"
        >
          <mock-outcomeiconset
            displayname="Assessment2"
            fail="1"
            incomplete="1"
            pass="0"
          />
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`AssessmentSummaryDetails render Renders an OutcomeChipSet for 8 items 1`] = `
<DocumentFragment>
  <ul
    class="assessmentSummaryDetails"
  >
    <li
      class="assessmentSummaryDetailsRow"
    >
      <div
        class="testSummary"
      >
        <div
          class="testSummaryDisplayName"
        >
          test
        </div>
        <div
          class="testSummaryStatus"
          data-automation-id="test-summary-status/test"
        >
          <mock-outcomechipset
            displayname="test"
            fail="0"
            incomplete="8"
            pass="0"
          />
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`AssessmentSummaryDetails render Renders an OutcomeIconSet for 7 items 1`] = `
<DocumentFragment>
  <ul
    class="assessmentSummaryDetails"
  >
    <li
      class="assessmentSummaryDetailsRow"
    >
      <div
        class="testSummary"
      >
        <div
          class="testSummaryDisplayName"
        >
          test
        </div>
        <div
          class="testSummaryStatus"
          data-automation-id="test-summary-status/test"
        >
          <mock-outcomeiconset
            displayname="test"
            fail="0"
            incomplete="7"
            pass="0"
          />
        </div>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
